# adaptive-contrastive-curriculum-for-multitask-knowledge-transfer

./: .gitignore  FIXES_APPLIED.md  IMPROVEMENTS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  RESULTS.md  UPGRADE_SUMMARY.md  VALIDATION_REPORT.md  pyproject.toml  requirements.txt  verify_project.sh
configs/: ablation.yaml  default.yaml  demo.yaml
models/: model_config.yaml
results/: config.yaml  results.json  training_metrics.json
scripts/: evaluate.py  predict.py  train.py
src/adaptive_contrastive_curriculum_for_multitask_knowledge_transfer/: __init__.py
src/adaptive_contrastive_curriculum_for_multitask_knowledge_transfer/data/: __init__.py  loader.py  preprocessing.py
src/adaptive_contrastive_curriculum_for_multitask_knowledge_transfer/evaluation/: __init__.py  analysis.py  metrics.py
src/adaptive_contrastive_curriculum_for_multitask_knowledge_transfer/models/: __init__.py  components.py  model.py
src/adaptive_contrastive_curriculum_for_multitask_knowledge_transfer/training/: __init__.py  trainer.py
src/adaptive_contrastive_curriculum_for_multitask_knowledge_transfer/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
